@@ -1,6 +1,5 @@
 package org.cryptomator.jfuse.win;
 
-import org.cryptomator.jfuse.win.FileInfoImpl;
 import org.cryptomator.jfuse.win.extr.fcntl_h;
 import org.cryptomator.jfuse.win.extr.fuse3_file_info;
 import org.junit.jupiter.api.Assertions;
@@ -9,7 +8,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.nio.file.OpenOption;
 import java.nio.file.StandardOpenOption;
 import java.util.Set;
@@ -21,8 +20,8 @@ public class FileInfoImplTest {
 	@MethodSource("testGetOpenFlagParams")
 	@DisplayName("test getOpenFlags()")
 	public void testGetOpenFlags(int flags, Set<OpenOption> expectedResult) {
-		try (var scope = MemorySession.openConfined()) {
-			var fi = new FileInfoImpl(fuse3_file_info.allocate(scope));
+		try (var arena = Arena.openConfined()) {
+			var fi = new FileInfoImpl(fuse3_file_info.allocate(arena));
 			fuse3_file_info.flags$set(fi.segment(), flags);
 
 			var result = fi.getOpenFlags();
