@@ -4,8 +4,8 @@ import org.cryptomator.jfuse.api.FileInfo;
 import org.cryptomator.jfuse.api.Fuse;
 import org.cryptomator.jfuse.api.FuseConnInfo;
 import org.cryptomator.jfuse.api.FuseMount;
-import org.cryptomator.jfuse.api.FuseOperations;
 import org.cryptomator.jfuse.api.FuseMountFailedException;
+import org.cryptomator.jfuse.api.FuseOperations;
 import org.cryptomator.jfuse.win.extr.fuse2.fuse2_h;
 import org.cryptomator.jfuse.win.extr.fuse3_config;
 import org.cryptomator.jfuse.win.extr.fuse3_conn_info;
@@ -25,9 +25,8 @@ import org.mockito.ArgumentMatcher;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.nio.file.Path;
 import java.time.Instant;
@@ -76,7 +75,7 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("MountFailedException when fuse_new fails")
 		public void testFuseNewFails() {
-			fuseH.when(() -> fuse_h.fuse3_new(Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemoryAddress.NULL);
+			fuseH.when(() -> fuse_h.fuse3_new(Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemorySegment.NULL);
 
 			var thrown = Assertions.assertThrows(FuseMountFailedException.class, () -> fuseImplSpy.mount(args));
 
@@ -87,7 +86,7 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("MountFailedException when fuse_mount fails")
 		public void testFuseMountFails() {
-			fuseH.when(() -> fuse_h.fuse3_new(Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemoryAddress.ofLong(42L));
+			fuseH.when(() -> fuse_h.fuse3_new(Mockito.any(), Mockito.any(), Mockito.anyLong(), Mockito.any())).thenReturn(MemorySegment.ofAddress(42L));
 			fuseH.when(() -> fuse_h.fuse3_mount(Mockito.any(), Mockito.any())).thenReturn(1);
 
 			var thrown = Assertions.assertThrows(FuseMountFailedException.class, () -> fuseImplSpy.mount(args));
@@ -102,11 +101,11 @@ public class FuseImplTest {
 			FuseMount fuseMount = Mockito.mock(FuseMount.class);
 			Mockito.doReturn(mountPoint).when(mountPoint).getRoot();
 			Mockito.doReturn(true).when(mountPoint).isAbsolute();
-			Mockito.doNothing().when((Fuse) fuseImplSpy).mount(Mockito.any(), Mockito.any(), Mockito.any());
+			Mockito.doNothing().when((Fuse) fuseImplSpy).mount(Mockito.any(), Mockito.any());
 
 			fuseImplSpy.mount("test", mountPoint);
 
-			Mockito.verify((Fuse) fuseImplSpy).mount(Mockito.any(), Mockito.eq(mountPoint), Mockito.any());
+			Mockito.verify((Fuse) fuseImplSpy).mount(Mockito.any(), Mockito.eq(mountPoint));
 		}
 	}
 
@@ -114,12 +113,12 @@ public class FuseImplTest {
 	@DisplayName("parseArgs")
 	public void testParseArgs() {
 		try (var fuseH = Mockito.mockStatic(fuse2_h.class);
-			 var scope = MemorySession.openConfined()) {
+			 var arena = Arena.openConfined()) {
 			fuseH.when(() -> fuse2_h.fuse_parse_cmdline(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any())).then(invocation -> {
 				MemorySegment mp = invocation.getArgument(1);
 				MemorySegment mt = invocation.getArgument(2);
 				MemorySegment fg = invocation.getArgument(3);
-				mp.set(ValueLayout.ADDRESS, 0L, scope.allocateUtf8String("/mount/point"));
+				mp.set(ValueLayout.ADDRESS, 0L, arena.allocateUtf8String("/mount/point"));
 				mt.set(JAVA_INT, 0L, 1);
 				fg.set(JAVA_INT, 0L, 1);
 				return 0;
@@ -142,12 +141,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("flush(\"/foo\", fi)")
 		public void testFlush() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse3_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).flush(Mockito.eq("/foo"), Mockito.any());
 
-				var result = fuseImpl.flush(path.address(), fi.address());
+				var result = fuseImpl.flush(path, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -156,12 +155,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("fsync(\"/foo\", 1, fi)")
 		public void testFsync() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse3_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsync(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
-				var result = fuseImpl.fsync(path.address(), 1, fi.address());
+				var result = fuseImpl.fsync(path, 1, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -170,12 +169,12 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("fsyncdir(\"/foo\", 1, fi)")
 		public void testFsyncdir() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var fi = fuse3_file_info.allocate(scope);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var fi = fuse3_file_info.allocate(arena);
 				Mockito.doReturn(42).when(fuseOps).fsyncdir(Mockito.eq("/foo"), Mockito.eq(1), Mockito.any());
 
-				var result = fuseImpl.fsyncdir(path.address(), 1, fi.address());
+				var result = fuseImpl.fsyncdir(path, 1, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -186,17 +185,17 @@ public class FuseImplTest {
 	@DisplayName("init() sets fuse_conn_info.wants |= FUSE_CAP_READDIRPLUS")
 	@Test
 	public void testInit() {
-		try (var scope = MemorySession.openConfined()) {
+		try (var arena = Arena.openConfined()) {
 			var result = new AtomicInteger();
 			Mockito.doAnswer(invocation -> {
 				FuseConnInfo connInfo = invocation.getArgument(0);
 				result.set(connInfo.want());
 				return null;
 			}).when(fuseOps).init(Mockito.any(), Mockito.any());
-			var connInfo = fuse3_conn_info.allocate(scope);
-			var fuseConfig = fuse3_config.allocate(scope);
+			var connInfo = fuse3_conn_info.allocate(arena);
+			var fuseConfig = fuse3_config.allocate(arena);
 
-			fuseImpl.init(connInfo.address(), fuseConfig.address());
+			fuseImpl.init(connInfo, fuseConfig);
 
 			Assertions.assertEquals(FuseConnInfo.FUSE_CAP_READDIRPLUS, result.get() & FuseConnInfo.FUSE_CAP_READDIRPLUS);
 		}
@@ -211,17 +210,17 @@ public class FuseImplTest {
 	public void testUtimens(long sec0, long nsec0, long sec1, long nsec1) {
 		Instant expectedATime = Instant.ofEpochSecond(sec0, nsec0);
 		Instant expectedMTime = Instant.ofEpochSecond(sec1, nsec1);
-		try (var scope = MemorySession.openConfined()) {
-			var path = scope.allocateUtf8String("/foo");
-			var times = fuse_timespec.allocateArray(2, scope);
-			var fi = scope.allocate(fuse3_file_info.$LAYOUT());
+		try (var arena = Arena.openConfined()) {
+			var path = arena.allocateUtf8String("/foo");
+			var times = fuse_timespec.allocateArray(2, arena);
+			var fi = arena.allocate(fuse3_file_info.$LAYOUT());
 			fuse_timespec.tv_sec$set(times, 0, sec0);
 			fuse_timespec.tv_nsec$set(times, 0, nsec0);
 			fuse_timespec.tv_sec$set(times, 1, sec1);
 			fuse_timespec.tv_nsec$set(times, 1, nsec1);
 			Mockito.doReturn(42).when(fuseOps).utimens(Mockito.eq("/foo"), Mockito.argThat(t -> expectedATime.equals(t.get())), Mockito.argThat(t -> expectedMTime.equals(t.get())), Mockito.argThat(usesSameMemorySegement(fi)));
 
-			var result = fuseImpl.utimens(path.address(), times.address(), fi.address());
+			var result = fuseImpl.utimens(path, times, fi);
 
 			Assertions.assertEquals(42, result);
 		}
@@ -234,13 +233,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("getattr")
 		public void testGetattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var attr = fuse_stat.allocate(scope);
-				var fi = scope.allocate(fuse3_file_info.$LAYOUT());
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var attr = fuse_stat.allocate(arena);
+				var fi = arena.allocate(fuse3_file_info.$LAYOUT());
 				Mockito.doReturn(42).when(fuseOps).getattr(Mockito.eq("/foo"), Mockito.any(), Mockito.argThat(usesSameMemorySegement(fi)));
 
-				var result = fuseImpl.getattr(path.address(), attr.address(), fi.address());
+				var result = fuseImpl.getattr(path, attr, fi);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -249,14 +248,14 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("getxattr")
 		public void testGetxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
-				var value = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
+				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).getxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any());
 
-				var result = fuseImpl.getxattr(path.address(), name.address(), value.address(), 100);
+				var result = fuseImpl.getxattr(path, name, value, 100);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -265,14 +264,14 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("setxattr")
 		public void testSetxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
-				var value = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
+				var value = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).setxattr(Mockito.eq("/foo"), Mockito.eq("bar"), Mockito.any(), Mockito.anyInt());
 
-				var result = fuseImpl.setxattr(path.address(), name.address(), value.address(), 100, 0xDEADBEEF);
+				var result = fuseImpl.setxattr(path, name, value, 100, 0xDEADBEEF);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -281,13 +280,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("listxattr")
 		public void testListxattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var list = scope.allocate(100);
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var list = arena.allocate(100);
 
 				Mockito.doReturn(42).when(fuseOps).listxattr(Mockito.eq("/foo"), Mockito.any());
 
-				var result = fuseImpl.listxattr(path.address(), list.address(), 100);
+				var result = fuseImpl.listxattr(path, list, 100);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -296,13 +295,13 @@ public class FuseImplTest {
 		@Test
 		@DisplayName("removexattr")
 		public void testRemovexattr() {
-			try (var scope = MemorySession.openConfined()) {
-				var path = scope.allocateUtf8String("/foo");
-				var name = scope.allocateUtf8String("bar");
+			try (var arena = Arena.openConfined()) {
+				var path = arena.allocateUtf8String("/foo");
+				var name = arena.allocateUtf8String("bar");
 
 				Mockito.doReturn(42).when(fuseOps).removexattr(Mockito.eq("/foo"), Mockito.eq("bar"));
 
-				var result = fuseImpl.removexattr(path.address(), name.address());
+				var result = fuseImpl.removexattr(path, name);
 
 				Assertions.assertEquals(42, result);
 			}
@@ -314,12 +313,12 @@ public class FuseImplTest {
 	@Test
 	@DisplayName("truncate")
 	public void testTruncate() {
-		try (var scope = MemorySession.openConfined()) {
-			var path = scope.allocateUtf8String("/foo");
-			var fi = scope.allocate(fuse3_file_info.$LAYOUT());
+		try (var arena = Arena.openConfined()) {
+			var path = arena.allocateUtf8String("/foo");
+			var fi = arena.allocate(fuse3_file_info.$LAYOUT());
 			Mockito.doReturn(42).when(fuseOps).truncate(Mockito.eq("/foo"), Mockito.eq(1337L), Mockito.argThat(usesSameMemorySegement(fi)));
 
-			var result = fuseImpl.truncate(path.address(), 1337L, fi.address());
+			var result = fuseImpl.truncate(path, 1337L, fi);
 
 			Assertions.assertEquals(42, result);
 		}
@@ -328,12 +327,12 @@ public class FuseImplTest {
 	@Test
 	@DisplayName("chown")
 	public void testChown() {
-		try (var scope = MemorySession.openConfined()) {
-			var path = scope.allocateUtf8String("/foo");
-			var fi = fuse3_file_info.allocate(scope);
+		try (var arena = Arena.openConfined()) {
+			var path = arena.allocateUtf8String("/foo");
+			var fi = fuse3_file_info.allocate(arena);
 			Mockito.doReturn(42).when(fuseOps).chown(Mockito.eq("/foo"), Mockito.eq(42), Mockito.eq(1337), Mockito.any());
 
-			var result = fuseImpl.chown(path.address(), 42, 1337, fi.address());
+			var result = fuseImpl.chown(path, 42, 1337, fi);
 
 			Assertions.assertEquals(42, result);
 		}
@@ -342,7 +341,7 @@ public class FuseImplTest {
 	private static ArgumentMatcher<FileInfo> usesSameMemorySegement(MemorySegment expected) {
 		return obj -> {
 			if (obj instanceof FileInfoImpl fiImpl) {
-				return fiImpl.segment().address().equals(expected.address()) && fiImpl.segment().byteSize() == expected.byteSize();
+				return fiImpl.segment().equals(expected) && fiImpl.segment().byteSize() == expected.byteSize();
 			}
 			return false;
 		};
