@@ -1,12 +1,11 @@
 package org.cryptomator.jfuse.win;
 
-import org.cryptomator.jfuse.win.TimeSpecImpl;
 import org.cryptomator.jfuse.win.extr.fuse_timespec;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.time.Instant;
 
 public class TimeSpecImplTest {
@@ -14,8 +13,8 @@ public class TimeSpecImplTest {
 	@Test
 	@DisplayName("test get()")
 	public void testGet() {
-		try (var scope = MemorySession.openConfined()) {
-			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(scope));
+		try (var arena = Arena.openConfined()) {
+			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(arena));
 			fuse_timespec.tv_sec$set(timeSpec.segment(), 123L);
 			fuse_timespec.tv_nsec$set(timeSpec.segment(), 456L);
 
@@ -29,8 +28,8 @@ public class TimeSpecImplTest {
 	@Test
 	@DisplayName("test set()")
 	public void testSet() {
-		try (var scope = MemorySession.openConfined()) {
-			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(scope));
+		try (var arena = Arena.openConfined()) {
+			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(arena));
 			fuse_timespec.tv_sec$set(timeSpec.segment(), 0L);
 			fuse_timespec.tv_nsec$set(timeSpec.segment(), 0L);
 
@@ -44,8 +43,8 @@ public class TimeSpecImplTest {
 	@Test
 	@DisplayName("test isUtimeOmit()")
 	public void testIsUtimeOmit() {
-		try (var scope = MemorySession.openConfined()) {
-			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(scope));
+		try (var arena = Arena.openConfined()) {
+			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(arena));
 
 			Assertions.assertFalse(timeSpec.isUtimeOmit());
 		}
@@ -54,8 +53,8 @@ public class TimeSpecImplTest {
 	@Test
 	@DisplayName("test isUtimeNow()")
 	public void testIsUtimeNow() {
-		try (var scope = MemorySession.openConfined()) {
-			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(scope));
+		try (var arena = Arena.openConfined()) {
+			var timeSpec = new TimeSpecImpl(fuse_timespec.allocate(arena));
 
 			Assertions.assertFalse(timeSpec.isUtimeNow());
 		}
